<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2016 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_edit_saved_password"
        android:icon="@drawable/ic_edit_24dp"
        app:iconTint="@color/default_icon_color"
        android:contentDescription="@string/password_entry_viewer_edit_stored_password"
        android:title="@string/password_entry_viewer_edit_stored_password_action_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete_saved_password"
        android:icon="@drawable/ic_delete_white_24dp"
        app:iconTint="@color/default_icon_color"
        android:title="@string/password_entry_viewer_delete_stored_password_action_title"
        android:contentDescription="@string/password_entry_viewer_delete_stored_password"
        app:showAsAction="ifRoom"/>
</menu>
